--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ h1{
     margin: auto;
     margin-top: 3rem;
     margin-bottom: 3rem;
-    grid-template-columns: 460px 460 460px;
+    grid-template-columns: 460px 460px 460px;
     grid-gap: 40px;
     text-align: center;
 }
