--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,11 @@ h1{
     margin-top: 3rem;
     margin-bottom: 3rem;
     grid-template-columns: 460px 460px 460px;
-    grid-gap: 40px;
     text-align: center;
+}
+.con{
+    float: left;
+    width: 460px;
 }
 .gif{
     width: 460px;
